EksTerraformStudy/cluster/manifest/ebs-deploy.yaml
# ~/eks-terraform/cluster/manifest/ebs-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ebs-deploy-5
spec:
  replicas: 1  # DB 하나만 띄우기
  selector:
    matchLabels:
      app: ebs-deploy-5
  template:
    metadata:
      labels:
        app: ebs-deploy-5
    spec:
      containers:
      - name: mysql-container
        image: mysql:8.0
        ports:
          - containerPort: 3306
            name: mysql
        # 컨테이너 내부 경로와 EBS 볼륨 연결
        volumeMounts:
        - name: mysql-volume-5
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-volume-5
        persistentVolumeClaim:
          claimName: ebs-pvc  # 위에서 만든 PVC
